# arrowfm

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/arrowfm/: __init__.py  architecture.py  config.py  decoder.py  inference.py  preprocessing.py
